--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,36 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
-
-    <TextView
-            android:layout_width="wrap_content"
+        tools:context=".MainActivity" android:background="#E9FFB7">
+    <ImageView
+            android:layout_width="294dp"
+            android:layout_height="332dp" app:srcCompat="@drawable/regAmbientalLogo"
+            android:id="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            android:layout_marginTop="56dp" app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="Logo completa do aplicativo"/>
+    <EditText
+            android:layout_width="395dp"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/editText" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editText3" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <Button
+            android:text="Button"
+            android:layout_width="138dp"
+            android:layout_height="52dp" tools:layout_editor_absoluteY="567dp"
+            tools:layout_editor_absoluteX="136dp" android:id="@+id/button"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
