Main e Cadastro feitas

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -5,6 +5,94 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CadastroActivity">
+        tools:context=".CadastroActivity" android:background="#E9FFB7">
 
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/regambientallogoarvore"
+            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="43dp"
+            android:inputType="textCapWords"
+            android:ems="10"
+            android:id="@+id/editNome"
+            android:textAlignment="center"
+            style="@style/Widget.AppCompat.AutoCompleteTextView"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496" android:hint="Nome"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="textCapWords"
+            android:ems="10"
+            android:id="@+id/editSobrenome" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/editNome" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
+            android:hint="Sobrenome"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:ems="10"
+            android:id="@+id/editEmail" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/editSobrenome" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
+            android:hint="E-mail"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editCPF" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/editEmail" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" android:textAlignment="center" android:hint="CPF"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editSenha"
+            android:hint="Senha" android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editCPF"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"
+            app:layout_constraintHorizontal_bias="0.0"/>
+    <EditText
+            android:layout_width="395dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:ems="10"
+            android:id="@+id/editConfirmarSenha" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/editSenha" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:hint="Confirmar Senha"
+            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.0"/>
+    <TextView
+            android:text="Cadastre-se"
+            android:layout_width="174dp"
+            android:layout_height="47dp"
+            android:id="@+id/botaoCadastre" android:textAlignment="center"
+            android:textSize="30sp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/editConfirmarSenha" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintVertical_bias="0.293"/>
+    TextView
+    android:text="Nome"
+    android:layout_width="396dp"
+    android:layout_height="29dp"
+    android:id="@+id/textView" android:layout_marginEnd="177dp" app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="176dp"
+    android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
+    android:password="false" android:inputType="textPersonName"
+    android:textAlignment="center" app:layout_constraintHorizontal_bias="0.497" android:autoText="false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
