--- a/app/src/main/res/layout/activity_estado.xml
+++ b/app/src/main/res/layout/activity_estado.xml
@@ -5,6 +5,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".EstadoActivity">
+        tools:context=".EstadoActivity" android:background="#E9FFB7">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
