--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
         tools:context=".MainActivity" android:background="#E9FFB7">
     <ImageView
             android:layout_width="294dp"
-            android:layout_height="332dp" app:srcCompat="@drawable/regAmbientalLogo"
+            android:layout_height="332dp" app:srcCompat="@drawable/regambientallogo"
             android:id="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:layout_marginTop="56dp" app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="Logo completa do aplicativo"/>
+            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="Logo completa do aplicativo" app:layout_constraintHorizontal_bias="0.495"/>
     <EditText
             android:layout_width="395dp"
             android:layout_height="wrap_content"
@@ -22,7 +22,7 @@
             android:id="@+id/editText" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:hint="E-mail" android:textAlignment="center"/>
     <EditText
             android:layout_width="395dp"
             android:layout_height="wrap_content"
@@ -31,10 +31,15 @@
             android:id="@+id/editText3" android:layout_marginTop="32dp"
             app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:hint="Senha" android:textAlignment="center"/>
     <Button
             android:text="Button"
             android:layout_width="138dp"
-            android:layout_height="52dp" tools:layout_editor_absoluteY="567dp"
-            tools:layout_editor_absoluteX="136dp" android:id="@+id/button"/>
+            android:layout_height="52dp"
+            android:id="@+id/botaoId" android:layout_marginTop="44dp"
+            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
