--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -5,11 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CadastroActivity" android:background="#E9FFB7">
+        tools:context=".CadastroActivity" android:background="@color/backgroundPadrao">
 
     <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/regAmbientalLogo"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/logo_recortado"
             android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="44dp" app:layout_constraintTop_toTopOf="parent"/>
