--- a/app/src/main/res/layout/activity_estado.xml
+++ b/app/src/main/res/layout/activity_estado.xml
@@ -5,6 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".EstadoActivity" android:background="#E9FFB7">
+        tools:context=".EstadoActivity">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="400dp"
+            android:layout_height="249dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="92dp">
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
