--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity" android:background="#E9FFB7">
+        tools:context=".MainActivity" android:background="@color/backgroundPadrao">
     <ImageView
             android:layout_width="294dp"
             android:layout_height="332dp" app:srcCompat="@drawable/regAmbientalLogo"
