--- a/app/src/main/res/layout/activity_option.xml
+++ b/app/src/main/res/layout/activity_option.xml
@@ -1,10 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".OptionActivity">
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".OptionActivity" android:id="@+id/constraintLayout">
+	<android.support.constraint.Guideline
+			android:id="@+id/guideline1"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+			app:layout_constraintGuide_percent="0.5"/>
 
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="411dp"
+			android:layout_height="366dp"
+			android:background="@color/optionsCima"
+			android:id="@+id/linearLayout" app:layout_constraintTop_toTopOf="parent"
+			android:layout_marginTop="1dp" app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toEndOf="parent">
+		<Button
+				android:text="Legislação"
+				android:layout_width="275dp"
+				android:layout_height="95dp" android:id="@+id/botaoLegislacao"
+				android:background="@drawable/botao_legislacao_estilo"
+				app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+				android:layout_marginStart="113dp" android:layout_marginEnd="113dp"
+				app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/branco"
+				android:textSize="@dimen/letraBotaoOptions"/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:background="@color/optionsBaixo"
+			app:layout_constraintLeft_toLeftOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintHorizontal_bias="1.0"
+			app:layout_constraintVertical_bias="1.0" android:id="@+id/linearLayout2"
+			app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="366dp">
+		<Button
+				android:text="Relatório Ambiental"
+				android:layout_width="275dp"
+				android:layout_height="95dp" android:id="@+id/botaoRelAmbiental"
+				app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+				app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+				app:layout_constraintBottom_toBottomOf="parent"
+				android:background="@drawable/botao_relatorio_ambiental_estilo" android:textColor="@color/branco"
+				android:textSize="@dimen/letraBotaoOptions"/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+	<ImageView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" app:srcCompat="@drawable/arvoreTransparente"
+			android:id="@+id/imageView6" app:layout_constraintTop_toTopOf="parent"
+			android:layout_marginTop="308dp" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginStart="137dp" android:layout_marginEnd="137dp"
+			app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
