--- a/app/src/main/res/layout/activity_estado.xml
+++ b/app/src/main/res/layout/activity_estado.xml
@@ -6,11 +6,96 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".EstadoActivity">
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:srcCompat="@drawable/arvoreTransparente"
+            android:id="@+id/imageView9"
+            android:visibility="visible" tools:visibility="visible"
+            android:background="@drawable/arvoreTransparente" android:fadeScrollbars="true"
+            tools:layout_editor_absoluteX="137dp"
+            tools:layout_editor_absoluteY="308dp"/>
+    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
+                                                android:id="@+id/guideline"
+                                                android:orientation="vertical"
+                                                app:layout_constraintGuide_percent="0.50121653"/>
+    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
+                                                android:id="@+id/guideline2"
+                                                android:orientation="horizontal"
+                                                app:layout_constraintGuide_percent="0.5"/>
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="400dp"
-            android:layout_height="249dp"
+            android:layout_width="204dp"
+            android:layout_height="368dp" app:layout_constraintEnd_toStartOf="@+id/guideline"
+            app:layout_constraintBottom_toTopOf="@+id/guideline2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="92dp">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
+            android:id="@+id/constraintLayout2" android:background="@color/estadosVerdeMS">
 
+        <Button
+                android:text="@string/botao_ms_texto"
+                android:layout_width="105dp"
+                android:layout_height="95dp"
+                android:id="@+id/button" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
+                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_ms"
+                android:textColor="@color/branco"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="207dp"
+            android:layout_height="367dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/guideline2"
+            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
+            android:id="@+id/constraintLayout3" android:background="@color/estadosVerdeMT">
+
+        <Button
+                android:text="Button"
+                android:layout_width="105dp"
+                android:layout_height="95dp"
+                android:id="@+id/button2" android:layout_marginEnd="58dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="160dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
+                android:layout_marginBottom="160dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/botao_mt" tools:text="@string/botao_mt_texto"
+                android:textColor="@color/branco"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="207dp"
+            android:layout_height="365dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintEnd_toStartOf="@+id/guideline"
+            android:id="@+id/constraintLayout4" android:background="@color/estadosVermelhoSP">
+
+        <Button
+                android:text="@string/botao_sp_texto"
+                android:layout_width="105dp"
+                android:layout_height="95dp"
+                android:id="@+id/button3" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
+                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_sp"
+                android:textColor="@color/branco"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="205dp"
+            android:layout_height="364dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/constraintLayout4" android:background="@color/estadosRoxoRJ">
+
+        <Button
+                android:text="@string/botao_rj_texto"
+                android:layout_width="105dp"
+                android:layout_height="95dp"
+                android:id="@+id/button4" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
+                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_rj"
+                android:textColor="@color/branco"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
