--- a/app/src/main/res/layout/activity_estado.xml
+++ b/app/src/main/res/layout/activity_estado.xml
@@ -1,101 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".EstadoActivity">
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:srcCompat="@drawable/arvoreTransparente"
-            android:id="@+id/imageView9"
-            android:visibility="visible" tools:visibility="visible"
-            android:background="@drawable/arvoreTransparente" android:fadeScrollbars="true"
-            tools:layout_editor_absoluteX="137dp"
-            tools:layout_editor_absoluteY="308dp"/>
-    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
-                                                android:id="@+id/guideline"
-                                                android:orientation="vertical"
-                                                app:layout_constraintGuide_percent="0.50121653"/>
-    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
-                                                android:id="@+id/guideline2"
-                                                android:orientation="horizontal"
-                                                app:layout_constraintGuide_percent="0.5"/>
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="204dp"
-            android:layout_height="368dp" app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
-            android:id="@+id/constraintLayout2" android:background="@color/estadosVerdeMS">
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".EstadoActivity">
+	<ImageView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" app:srcCompat="@drawable/arvoretransparente"
+			android:id="@+id/imageView9"
+			android:visibility="visible" tools:visibility="visible"
+			android:background="@drawable/arvoretransparente" android:fadeScrollbars="true"
+			app:layout_constraintTop_toTopOf="parent"
+			android:layout_marginTop="308dp" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginStart="137dp" android:layout_marginEnd="137dp"
+			app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
+			app:layout_constraintVertical_bias="0.0"/>
+	<androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
+	                                            android:id="@+id/guideline"
+	                                            android:orientation="vertical"
+	                                            app:layout_constraintGuide_percent="0.5"/>
+	<androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
+	                                            android:id="@+id/guideline2"
+	                                            android:orientation="horizontal"
+	                                            app:layout_constraintGuide_percent="0.5"/>
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="212dp"
+			android:layout_height="366dp"
+			android:id="@+id/constraintLayout2" android:background="@color/estadosVerdeMS"
+			app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp">
 
-        <Button
-                android:text="@string/botao_ms_texto"
-                android:layout_width="105dp"
-                android:layout_height="95dp"
-                android:id="@+id/button" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
-                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_ms"
-                android:textColor="@color/branco"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="207dp"
-            android:layout_height="367dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
-            android:id="@+id/constraintLayout3" android:background="@color/estadosVerdeMT">
+		<Button
+				android:text="@string/botao_ms_texto"
+				android:layout_width="105dp"
+				android:layout_height="95dp"
+				android:id="@+id/button" app:layout_constraintTop_toTopOf="parent"
+				android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
+				android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
+				android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
+				app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_ms"
+				android:textColor="@color/branco"/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="211dp"
+			android:layout_height="366dp"
+			android:id="@+id/constraintLayout3" android:background="@color/estadosVerdeMT"
+			app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toEndOf="@+id/constraintLayout2" android:layout_marginStart="8dp">
 
-        <Button
-                android:text="Button"
-                android:layout_width="105dp"
-                android:layout_height="95dp"
-                android:id="@+id/button2" android:layout_marginEnd="58dp" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="160dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
-                android:layout_marginBottom="160dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:background="@drawable/botao_mt" tools:text="@string/botao_mt_texto"
-                android:textColor="@color/branco"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="207dp"
-            android:layout_height="365dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintEnd_toStartOf="@+id/guideline"
-            android:id="@+id/constraintLayout4" android:background="@color/estadosVermelhoSP">
+		<Button
+				android:text="Button"
+				android:layout_width="105dp"
+				android:layout_height="95dp"
+				android:id="@+id/button2" android:layout_marginEnd="58dp" app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="160dp"
+				app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="58dp"
+				android:layout_marginBottom="160dp" app:layout_constraintBottom_toBottomOf="parent"
+				android:background="@drawable/botao_mt" tools:text="@string/botao_mt_texto"
+				android:textColor="@color/branco"/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="206dp"
+			android:layout_height="365dp"
+			android:id="@+id/constraintLayout4" android:background="@color/estadosVermelhoSP"
+			app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
-                android:text="@string/botao_sp_texto"
-                android:layout_width="105dp"
-                android:layout_height="95dp"
-                android:id="@+id/button3" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
-                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_sp"
-                android:textColor="@color/branco"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="205dp"
-            android:layout_height="364dp"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/constraintLayout4" android:background="@color/estadosRoxoRJ">
+		<Button
+				android:text="@string/botao_sp_texto"
+				android:layout_width="105dp"
+				android:layout_height="95dp"
+				android:id="@+id/button3" app:layout_constraintTop_toTopOf="parent"
+				android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
+				android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
+				android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
+				app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_sp"
+				android:textColor="@color/branco"/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
+	<androidx.constraintlayout.widget.ConstraintLayout
+			android:layout_width="204dp"
+			android:layout_height="364dp"
+			android:background="@color/estadosRoxoRJ"
+			android:layout_marginEnd="1dp"
+			app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+			android:layout_marginBottom="1dp">
 
-        <Button
-                android:text="@string/botao_rj_texto"
-                android:layout_width="105dp"
-                android:layout_height="95dp"
-                android:id="@+id/button4" app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
-                app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_rj"
-                android:textColor="@color/branco"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+		<Button
+				android:text="@string/botao_rj_texto"
+				android:layout_width="105dp"
+				android:layout_height="95dp"
+				android:id="@+id/button4" app:layout_constraintTop_toTopOf="parent"
+				android:layout_marginTop="160dp" app:layout_constraintBottom_toBottomOf="parent"
+				android:layout_marginBottom="160dp" app:layout_constraintStart_toStartOf="parent"
+				android:layout_marginStart="58dp" android:layout_marginEnd="58dp"
+				app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/botao_rj"
+				android:textColor="@color/branco"/>
+	</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
