--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editText" android:layout_marginTop="16dp"
+            android:id="@+id/emailId" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:hint="E-mail" android:textAlignment="center"/>
@@ -28,18 +28,18 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/editText3" android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginEnd="8dp"
+            android:id="@+id/senhaId" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/emailId" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:hint="Senha" android:textAlignment="center"/>
     <Button
-            android:text="Button"
+            android:text="Entrar"
             android:layout_width="138dp"
             android:layout_height="52dp"
             android:id="@+id/botaoId" android:layout_marginTop="44dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/senhaId" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintVertical_bias="0.0" android:background="@drawable/botao_ms"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
